--- a/style.css
+++ b/style.css
@@ -42,6 +42,20 @@ header .logo {
     font-weight: bold;
 }
 
+header {  
+    /* this section to make the navbar sticky not the best way to implement but im too lazy to organise prolly will organise later */
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+
+nav {
+    background: linear-gradient(90deg, #FFEB3B, #FFC107);
+    box-shadow: 0 4px 2px -2px rgba(0,0,0,0.1);
+}
+  
+
 nav ul {
     list-style: none;
     display: flex;
@@ -57,6 +71,7 @@ nav ul li a {
 nav ul li a:hover {
     color: var(--btn-primary);
 }
+
 
 .theme-toggle {
     margin-left: auto;
